<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/detail_activity_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_collapseMode="pin" />

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/detail_scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <ImageView
                android:id="@+id/image_detail"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:gravity="center"
                android:paddingBottom="10dp" />

            <TextView
                android:id="@+id/text_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textSize="18sp" />

            <ListView
                android:id="@+id/list_detail"
                android:layout_width="wrap_content"
                android:layout_height="10dp"></ListView>
            <!--height of ListView is set programmatically-->

            <TextView
                android:id="@+id/text_points"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:paddingEnd="20dp"
                android:paddingRight="20dp"
                android:text="@string/points"
                android:textSize="18sp" />

            <TableLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal">

                <TableRow>

                    <Button
                        android:id="@+id/weight_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginRight="20dp"
                        android:background="@layout/style_shape_rounded_corners_blue"
                        android:onClick="onClickPoints"
                        android:textColor="@color/white" />

                    <Button
                        android:id="@+id/weight_button_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginRight="20dp"
                        android:background="@layout/style_shape_rounded_corners_blue"
                        android:onClick="onClickPoints2"
                        android:textColor="@color/white" />

                    <Button
                        android:id="@+id/weight_button_3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginRight="20dp"
                        android:background="@layout/style_shape_rounded_corners_blue"
                        android:onClick="onClickPoints3"
                        android:textColor="@color/white" />
                </TableRow>

                <TableRow android:id="@+id/second_row">

                    <Button
                        android:id="@+id/weight_button_alternative"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginRight="20dp"
                        android:background="@layout/style_shape_rounded_corners_blue"
                        android:onClick="onClickPointsAltern"
                        android:textColor="@color/white" />

                    <Button
                        android:id="@+id/weight_button_alternative_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginRight="20dp"
                        android:background="@layout/style_shape_rounded_corners_blue"
                        android:onClick="onClickPointsAltern2"
                        android:textColor="@color/white" />

                    <Button
                        android:id="@+id/weight_button_alternative_3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginRight="20dp"
                        android:background="@layout/style_shape_rounded_corners_blue"
                        android:onClick="onClickPointsAltern3"
                        android:textColor="@color/white" />
                </TableRow>
            </TableLayout>

        </LinearLayout>


    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        android:src="@drawable/icon_timer_48" />

</android.support.design.widget.CoordinatorLayout>