<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/toast_you_made_it"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:textSize="10pt"
        android:padding="6pt"
        android:background="@layout/style_shape_rounded_corners_orange"
        android:text="Du hast es geschafft!"
        android:textColor="@android:color/white" />

</LinearLayout>